--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
     <ul>
       <li>Antropología y Epistemología de las Ciencias Empresariales - Aldo Giacchetti</li>
       <li>Cálculo en Varias Variables - Kely Anco Torres</li>
-      <li>Desarrollo de Habilidades de Negociación - Martín Quintanilla Rodríguez</li>
-      <li>Desarrollo de Habilidades para el Trabajo en Equipo - Raul Urday Dioses</li>
-      <li>Fe y Razón - Jorge Olaechea Catter</li>
-      <li>Matemáticas Financieras - María del Carmen Delgado Torres</li>
-      <li>Introducción de Ciencia de la Computación - Ernesto Cuadros Vargas</li>
+      <li>Desarrollo de Habilidades de Negociación - <a href="https://pe.linkedin.com/in/mart%C3%ADn-quintanilla-18a030127?utm_source=share&utm_medium=member_mweb&utm_campaign=share_via&utm_content=profile">Martin Quintanilla Rodriguez</a></li>
+      <li>Desarrollo de Habilidades para el Trabajo en Equipo - <a href="https://pe.linkedin.com/in/ra%C3%BAl-a-urday-dioses-0a6b8967?utm_source=share&utm_medium=member_mweb&utm_campaign=share_via&utm_content=profile" target="_blank">Raul Urday Dioses</a></li>
+      <li>Fe y Razón - <a href="https://pe.linkedin.com/in/jorgeolaecheacatter?utm_source=share&utm_medium=member_mweb&utm_campaign=share_via&utm_content=profile">Jorge Olaechea Catter</a></li>
+      <li>Matemáticas Financieras - <a href="https://www.linkedin.com/in/mar%C3%ADa-del-carmen-delgado-torres-76860446?trk=contact-info">Maria del Carmen Delgado Torres</a></li>
+      <li>Introducción de Ciencia de la Computación - <a href="https://pe.linkedin.com/in/ecuadrosv?utm_source=share&utm_medium=member_mweb&utm_campaign=share_via&utm_content=profile" target="_blank">Ernesto Cuadros Vargas</a></li>
     </ul>
 
     <h2>Hobbies</h2>
@@ -85,18 +85,18 @@
     </ul>
 
     <h2>Red de Contactos</h2>
-    <ul>
-      <li>Damaris Condo Merma</li>
-      <li>Yessica Arias Mendoza</li>
-      <li>Maria Fernanda Apaza Meza</li>
-      <li>Fiorella Canasa Mayta</li>
-      <li>Angeles Farfan Pinazo</li>
-      <li>Maria Paz Gonzales Leon</li>
-      <li>Fabian Sanchez Poma</li>
-      <li>Alexandra Escobedo Teran</li>
-      <li>Jimena Quiroz</li>
-      <li>Maria Quinto Gonza</li>
-    </ul>
+  <ul>
+  <li><a href="https://ismael-caceres.github.io/Ismael-Valentin-Caceres-Gallegos/" target="_blank">Ismael Valentín Cáceres Gallegos</a></li> 
+  <li><a href="https://mariapazgonzalesleon.github.io/" target="_blank">Maria Paz Gonzales Leon</a></li>
+  <li><a href="https://sergipalomino.github.io/Perfil.Sergio.PR/" target="_blank">Sergio Gonzalo Palomino Díaz</a></li>
+  <li><a href="https://graziavalentina.github.io/Grazia-Valentina-Bedregal-Ochoa/" target="_blank">Grazia Valentina Bedregal Ochoa</a></li>
+  <li><a href="https://kiacondo.github.io/mipaginawebdma/" target="_blank">Damaris Condo Merma</a></li> 
+  <li><a href="https://fiorellacanasa.github.io/fiorella-canasa/" target="_blank">Fiorella Canasa Mayta</a></li>
+  <li><a href="https://nayefarfanp.github.io/mi-pagina-web-/" target="_blank">Angeles Farfan Pinazo</a></li>
+  <li><a href="https://mariaquintog.github.io/" target="_blank">Maria Quinto Gonza</a></li>
+  <li><a href="https://jimenaq25.github.io/Jimena-Sofia-Quiroz-Bautista/" target="_blank">Jimena Quiroz Bautista</a></li>
+  <li><a href="https://alexandrafabiola.github.io/alexandra-escobedo/" target="_blank">Alexandra Escobedo Teran</a></li>
+</ul>
   </div>
 </body>
 </html>
